# mc-cpp

./: .gitignore  CMakeLists.txt  main.cpp
include/mc_cpp/: endian.cpp  endian.hpp  logger.cpp  logger.hpp  protocol.hpp  types.hpp
include/mc_cpp/anvil/: anvil_chunk.cpp  anvil_chunk.hpp  anvil_region.cpp  anvil_region.hpp  level.cpp  level.hpp
include/mc_cpp/anvil/level_dat/: custom_boss_events.cpp  custom_boss_events.hpp  datapacks.cpp  datapacks.hpp  dragon_fight.cpp  dragon_fight.hpp  gamerules.cpp  gamerules.hpp  nbt_uuid.cpp  nbt_uuid.hpp  player_data.cpp  player_data.hpp  position_rotation.cpp  position_rotation.hpp  world_generator.cpp  world_generator.hpp
include/mc_cpp/common/: base64.hpp  color.cpp  color.hpp  json.hpp  macro_magic.hpp  mutex.hpp
include/mc_cpp/compression/: zlib.cpp  zlib.hpp
include/mc_cpp/crypto/: aes.cpp  aes.hpp  daft_sha1.cpp  daft_sha1.hpp  rsa.cpp  rsa.hpp
include/mc_cpp/game/: biome.cpp  biome.hpp  block.hpp  constants.hpp
include/mc_cpp/nbt/: nbt.cpp  nbt.hpp  text.cpp  text.hpp  to_compound.hpp
include/mc_cpp/registry/: minecraft.cpp  minecraft.hpp  registry.hpp
include/mc_cpp/registry/registries/: biome_colors.cpp  biome_colors.hpp  biome_properties.cpp  biome_properties.hpp  biomes.cpp  biomes.hpp  blockstates.cpp  blockstates.hpp  dimensions.cpp  dimensions.hpp  legacy_biomes.cpp  legacy_biomes.hpp  legacy_blockstates.cpp  legacy_blockstates.hpp  tile_entities.cpp  tile_entities.hpp
include/mc_cpp/tcp/: basesocket.hpp  tcpconnection.hpp  tcpserver.hpp  tcpsocket.hpp  tcptraffic.cpp  tcptraffic.hpp
registries/: legacy_biomes.json  legacy_blockstates.json
registries/765/: biome_properties.json  color_triangles.json  foliage_colors.json  grass_colors.json  tile_entities.json  water_colors.json
registries/769/: biome_properties.json  color_triangles.json  foliage_colors.json  grass_colors.json  tile_entities.json  water_colors.json
